<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/groupForm">
        <item
            android:id="@+id/itemLeave"
            android:icon="@drawable/ic_file"
            android:title="@string/leave" />
        <item
            android:id="@+id/itemWorkTravel"
            android:icon="@drawable/ic_file"
            android:title="@string/giayyeucaucongtac" />
        <item
            android:id="@+id/itemGiayRaCong"
            android:icon="@drawable/ic_file"
            android:title="@string/giayracong" />
        <item
            android:id="@+id/itemYeucCauXe"
            android:icon="@drawable/ic_file"
            android:title="@string/giayyeucauxe" />
        <item
            android:id="@+id/itemMangHangHoaRangoai"
            android:icon="@drawable/ic_file"
            android:title="@string/giaymanghanghoarangoai" />
    </group>
    <item
        android:id="@+id/itemSignOut"
        android:icon="@drawable/ic_logout"
        android:title="@string/dangxuat" />
    <item
        android:id="@+id/itemExit"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="Exit"/>
</menu>